# gstreamer

./: .gitignore  .gitmodules  configure.ac  gst.wasm.toml  meson.build
.github/workflows/: check.yml  sync.yml
girs/: GstWebRTC-1.0.gir
gst/: gst.c  gstdatetime.c  gstelement.c  gstelementfactory.c  gstelementfactory.h  gstghostpad.c  gstindex.c  gstinfo.c  gstinfo.h  gstpad.c  gstpipeline.c  gstplugin.h  gstquery.c  gstquery.h  gstvalue.c  gstvalue.h
libs/gst/base/: gstbaseparse.c  gstbasesink.c  gstbasesink.h  gstbasetransform.c
plugins/elements/: Makefile.am  gstelements.c  gstinputselector.c  gstmultiqueue.c  gstq2tmpfile.c  gstq2tmpfile.h  gstq2tmpfilefd.c  gstq2tmpfileram.c  gstqueue2.c  gstqueue2.h
plugins/indexers/: Makefile.am  gstindexers.c  gstmemindex.c
subprojects/: gobject-introspection.wrap  gst-plugins-rs.wrap  orc.wrap
subprojects/gst-docs/examples/tutorials/: README.md  meson.build
subprojects/gst-libav/: meson.build  meson_options.txt
subprojects/gst-libav/ext/libav/: gstav.c  gstavauddec.c  gstavcodecmap.c  gstavviddec.c  meson.build
subprojects/gst-plugins-bad/: meson.build  meson_options.txt
subprojects/gst-plugins-bad/ext/: meson.build
subprojects/gst-plugins-bad/ext/dash/: gstdashdemux.c  gstmpdclient.c  gstplugin.c
subprojects/gst-plugins-bad/ext/openal/: gstopenalelement.c  gstopenalsink.c  gstopenalsrc.c  meson.build
subprojects/gst-plugins-bad/ext/openexr/: gstopenexrdec.cpp
subprojects/gst-plugins-bad/ext/sctp/usrsctp/: meson.build
subprojects/gst-plugins-bad/ext/sdl2/: gstsdl2sink.c  meson.build
subprojects/gst-plugins-bad/gst-libs/gst/: meson.build
subprojects/gst-plugins-bad/gst-libs/gst/adaptivedemux/: gstadaptivedemux.c
subprojects/gst-plugins-bad/gst-libs/gst/codecparsers/: gsth264parser.c  gsth265parser.c  gsth265parser.h  gsth266parser.c  gsth266parser.h  meson.build
subprojects/gst-plugins-bad/gst-libs/gst/d3d11/: gstd3d11bufferpool.cpp  gstd3d11memory.cpp  gstd3d11memory.h
subprojects/gst-plugins-bad/gst-libs/gst/emscripten/: gstemscripten.c  gstemscripten.h  meson.build
subprojects/gst-plugins-bad/gst-libs/gst/mpegts/: gst-mpegtsklvmeta.c  gst-mpegtsklvmeta.h  gst-mpegtspesmetadatameta.c  gst-mpegtspesmetadatameta.h  gstmpegtsdescriptor.c  gstmpegtsdescriptor.h  meson.build
subprojects/gst-plugins-bad/gst-libs/gst/webrtc/: datachannel.c
subprojects/gst-plugins-bad/gst/debugutils/: debugutilsbad.c  fpsdisplaysink.c  gstdebugutilsbadelements.h  meson.build
subprojects/gst-plugins-bad/gst/mpegtsdemux/: gstmpegdefs.h  tsdemux.c
subprojects/gst-plugins-bad/gst/videoparsers/: gsth266parse.c  gsth266parse.h
subprojects/gst-plugins-bad/sys/: meson.build
subprojects/gst-plugins-bad/sys/d3d11/: gstd3d11compositor.cpp  gstd3d11convert.cpp  gstd3d11d2d1.cpp  gstd3d11decoder.cpp  gstd3d11deinterlace.cpp  gstd3d11download.cpp  gstd3d11dxgicapture.cpp  gstd3d11screencapture.cpp  gstd3d11screencapture.h  gstd3d11screencapturesrc.cpp  gstd3d11upload.cpp  gstd3d11videosink.cpp  gstd3d11window.cpp  gstd3d11window.h  gstd3d11window_dummy.cpp  gstd3d11window_win32.cpp  gstd3d11winrtcapture.cpp  meson.build  plugin.cpp
subprojects/gst-plugins-bad/sys/mediafoundation/: gstmfvideoenc.cpp  gstmfvideoenc.h
subprojects/gst-plugins-bad/sys/msdk/: msdk.c
subprojects/gst-plugins-bad/sys/nvcodec/: meson.build
subprojects/gst-plugins-bad/tests/check/elements/: h265parse.c
subprojects/gst-plugins-bad/tests/check/libs/: h264parser.c  h265parser.c  h266parser.c
subprojects/gst-plugins-bad/tests/examples/mpegts/: ts-parser.c
subprojects/gst-plugins-base/: meson.build  meson_options.txt
subprojects/gst-plugins-base/ext/gl/: gstglcolorbalance.c  gstgleffects.c  gstglimagesink.c  gstglvideoflip.c
subprojects/gst-plugins-base/ext/ogg/: gstoggdemux.c  gstoggplugin.c
subprojects/gst-plugins-base/ext/theora/: gsttheora.c  meson.build
subprojects/gst-plugins-base/gst-libs/gst/audio/: gstaudiodecoder.c  (+2 more)
subprojects/gst-plugins-base/gst/tcp/: gsttcpsrcstats.c
subprojects/gst-plugins-base/gst/typefind/: gsttypefindfunctions.c
subprojects/gst-plugins-base/gst/videoconvertscale/: gstvideoconvertscale.c
subprojects/gst-plugins-base/gst/videotestsrc/: gstvideotestsrc.c
subprojects/gst-plugins-base/tests/check/: meson.build
subprojects/gst-plugins-base/tests/interactive/: meson.build
subprojects/gst-plugins-good/: meson.build
subprojects/gst-plugins-good/ext/adaptivedemux2/: meson.build
subprojects/gst-plugins-good/gst/isomp4/: gstqtmux.c
subprojects/gst-plugins-good/gst/rtp/: gstrtp.c  gstrtpelements.h  gstrtph266common.h  gstrtph266depay.c  gstrtph266depay.h  gstrtph266pay.c  gstrtph266pay.h  meson.build
subprojects/gst-plugins-ugly/: meson.build
subprojects/gstreamer/: meson.build
subprojects/gstreamer-sharp/: generate_code.py  meson.build
subprojects/gstreamer-sharp/sources/: gstreamer-sharp.metadata
subprojects/gstreamer/gst/: gst.c  gst_private.h  gstallocator.c  gstbin.c  gstbufferpool.c  gstbus.c  gstconfig.h.in  gstelement.c  gstelement.h  gstinfo.h  gstmacros.h  gstminiobject.c  gstminiobject.h  gstobject.c  gstpad.c  gstpad.h  gstparamspecs.c  gstpipeline.c  gstplugin.h  gstpreset.c  gstregistry.c  gstsystemclock.c  gsttask.c  gsttask.h  gsttoc.c  gsturi.c  gstvalue.c
subprojects/gstreamer/gst/parse/: grammar.y.in
subprojects/gstreamer/plugins/tracers/: gstframerate.c  gstframerate.h  gsttracers.c  meson.build
subprojects/gstreamer/tests/check/: meson.build  pre-js.js
subprojects/gstreamer/tests/validate/: meson.build
subprojects/gstreamer/tools/: gst-inspect.c
tests/emscripten/: pre-js.js
tests/static-plugins/: meson.build
tools/: gst-indent  uncrustify.config
win32/: MANIFEST  README.txt
win32/vs16/: grammar.vcxproj  gst-inspect.vcxproj  gst-inspect.vcxproj.filters  gst-launch.vcxproj  gst-launch.vcxproj.filters  gstreamer.sln  libgstbase.vcxproj  libgstbase.vcxproj.filters  libgstcontroller.vcxproj  libgstcontroller.vcxproj.filters  libgstcoreelements.vcxproj  libgstcoreelements.vcxproj.filters  libgstreamer.vcxproj  libgstreamer.vcxproj.filters
(+63 files in other folders)
