option('package-name', type : 'string', yield : true,
       description : 'package name to use in plugins')
option('package-origin', type : 'string',
       value : 'Unknown package origin', yield : true,
       description : 'package origin URL to use in plugins')
option('doc', type : 'feature', value : 'auto', yield: true,
       description: 'Enable documentation.')
option('tests', type : 'feature', value : 'auto', yield : true)
option('element_groups', type : 'array', value : ['audenc', 'auddec', 'videnc', 'viddec', 'demux', 'mux', 'deinterlace', 'vidcmp' ], choices: ['audenc', 'auddec', 'videnc', 'viddec', 'demux', 'mux', 'deinterlace', 'vidcmp'], description : 'Groups of elements to compile into the plugin')
